   	part. Requested by AlexB.

   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.47--

   !	Modify makefiles and version.sh.in to correspond with recent
   	switch to acsite.m4 and renaming of some macros.

--1.75.46--

   *	Upgraded SQLite to 3.8.10.2

   +	Added pdqListPruneSection().

   !	Modified pdqLog() to take a prefix string to improve log detail.

  !!	Fixed pdqInit() bug when the DNS server does not recurse and
  	we are using pdqSetShortQuery(1) to skip our own recursion.
  	Can't use pdqListPruneMatch() nor pdqListPrune() as it will
  	discard some or all of root_hints list.  pdqRootGetNS() will
  	fetch an NS's 5A records on-demand as needed, so an incomplete
  	root_hints is not critical.

  !!	Fixed pdqRootGetNS() to correctly handle "glue record" results
  	when querying the root NS servers, which return no answer
  	records, only authority NS records.  Impacted dnsListQueryNs()
  	and so uri and milter-link NS BL related options.  Reported by
  	Alex Broens.

--1.75.45--

   +	Added ulong_format, slong_format, ulong_tostring, slong_tostring.

   !	Fix dnsListCreate() to support both semi-colon and comma
	separated list items.  Reported by Alex Broens.

--1.75.44--

   !	Fixed potential leaks smfAccessMail2() and smfAccessRcpt2() on
   	buffer overflow error when forming combo tags.

   !	Fixed sys/malloc.c and sys/track.c handling of realloc().

   !	Always build alt_daemon(), especially for milters.  Our version
   	uses exit() to terminate the parent so that atexit() handlers
   	are processed, while NetBSD (maybe others) use _exit().

--1.75.43--

   !	Fixed NET_GET_LONG() macro sign-extension bug when an unsigned
	long is 64 bits.

   !	Fixed parsepath -t regression test to include the STRICT_ flags
	by name.

   !	Fix uriParse2() handling of mail address containing plus-signs.